# vcpkg_gha

./: CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: build.yml
